fixed selection in light-mode not readable

--- a/src/style/_dark-light-mode.scss
+++ b/src/style/_dark-light-mode.scss
@@ -2,6 +2,7 @@
 
 ::selection {
   background-color: $current-line;
+  color: $foreground;
 }
 
 @media (prefers-color-scheme: dark) {
